<resources>
    <string name="powered_by">Powered by</string>
    <string name="company">POS Sale APP</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="ingresar">Ingresar</string>
    <string name="logIn">Iniciar Sesión</string>
    <string name="registrate1">¿Aún no tienes una cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="olvido_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="hint_ruc">RUC</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_usuario_correo">Usuario o Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellidos">Apellidos</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_telefono">Número de teléfono</string>
    <string name="hint_razon_social">Razón Social</string>
    <string name="hint_numero_pedido">Número de pedido</string>
    <string name="hint_direccion_entrega">Dirección de entrega</string>
    <string name="hint_fecha_entrega">Fecha de entrega</string>
    <string name="hint_forma_pago">Forma de pago</string>
    <string name="hint_limiteCredito">Límite de crédito</string>
    <string name="hint_observaciones">Observaciones</string>
    <string name="hint_descripcion_producto">Descripción del producto</string>
    <string name="hint_stock">Stock</string>
    <string name="hint_stock_en_linea">Stock en linea</string>
    <string name="hint_precio_unitario">Precio unitario</string>
    <string name="hint_politica_precio">Política de precio</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="hint_peso">Peso</string>
    <string name="hint_unidad_medida">Unidad de medida</string>
    <string name="hint_marca">Marca</string>
    <string name="hint_ruc_dni">RUC o DNI</string>
    <string name="hint_precio_mayor">Precio mayor</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_cliente">Cliente</string>
    <string name="hint_fecha">Fecha</string>
    <string name="hint_comprador">Comprador</string>
    <string name="hint_comprador_general">Comprador general</string>
    <string name="hint_vendedor">Vendedor</string>
    <string name="hint_vendedor_general">Vendedor general</string>
    <string name="hint_cobrador">Cobrador</string>
    <string name="hint_cobrador_general">Cobrador general</string>
    <string name="hint_cliente_general">Cliente general</string>
    <string name="hint_almacen">Almacen</string>
    <string name="hint_almacen_general">Almacen general</string>
    <string name="hint_codigoEstablecimiento">Codigo establecimiento</string>
    <string name="hint_departamento">Departamento</string>
    <string name="hint_provincia">Provincia</string>
    <string name="hint_distrito">Distrito</string>
    <string name="hint_comision">Comision</string>
    <string name="hint_ubigeo">Ubigeo</string>
    <string name="menu_marcas">Marcas</string>
    <string name="menu_compras">Compras</string>
    <string name="menu_cuenta">Mi Cuenta</string>
    <string name="menu_configuracion">Configuraciones</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_promociones">Promociones</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_ventas_listado">Listado de ventas diarias</string>
    <string name="menu_ventas_historicas">Ventas historica</string>
    <string name="menu_pedido_sugerido">Pedido sugerido</string>
    <string name="navigation_drawer_open">Abrir menu</string>
    <string name="navigation_drawer_close">Cerrar menu</string>
    <string name="personal">Personal</string>
    <string name="negocio">Negocio</string>
    <string name="text_app_personal">Compra en bodegas cercanas</string>
    <string name="text_app_negocio">Vende y equipa tu bodega</string>
    <string name="aceptar">Aceptar</string>
    <string name="registro_personal">Registro personal</string>
    <string name="info">Info</string>
    <string name="transition_registro">transition_registro</string>
    <string name="registro_negocio">Registro de negocio</string>
    <string name="confirmar_correo">Confirma tu dirección de correo</string>
    <string name="confirmar_correo1">Te enviaremos un correo a:</string>
    <string name="confirmar_correo2">Verifica tu correo y selecciona el link de confirmación para continuar</string>
    <string name="de_acuerdo">De acuerdo</string>
    <string name="registrarse">Registrarse</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productos">Productos</string>
    <string name="moneda">S/.&#160;</string>
    <string name="moneda_dolar">$.&#160;</string>
    <string name="kilogramo">Kg.&#160;</string>
    <string name="mi_pedido">Mi pedido</string>
    <string name="buscar">Buscar</string>
    <string name="correo">Correo</string>
    <string name="info_correo">Necesitaremos validar la dirección de correo y se usará para iniciar sesión</string>
    <string name="ruc">RUC</string>
    <string name="info_ruc">Esta información nos ayudará a identificarte en nuestra red :)</string>
    <string name="sin_conexion">Sin conexión</string>
    <string name="comprobar_conexion">Comprueba la conexión a internet y vuelve a intentarlo</string>
    <string name="compruebe_conexion">Compruebe la conexión a internet</string>
    <string name="oops_error">Opps! algo pasó</string>
    <string name="oops">Opps!</string>
    <string name="intentelo_nuevamente">Inténtelo nuevamente</string>
    <string name="cuenta_personal">Cuenta personal</string>
    <string name="codigo_usuario">Código de usuario</string>
    <string name="codigo_bodega">Código de bodega</string>
    <string name="codigo_cliente">Código de cliente</string>
    <string name="mostrar_mas">Mostrar más</string>
    <string name="ocultar">Ocultar</string>
    <string name="error_tiempo_espera">No se pudo conectar, inténtelo nuevamente</string>
    <string name="error_no_autorizado">Sesión no autorizada, por favor inicie sesión nuevamente</string>
    <string name="error_sincronizacion">Ocurrió algo inesperado en la sincronización</string>
    <string name="error_contrasena_corta">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_ruc_no_valido">RUC no válido</string>
    <string name="error_correo_no_valido">Correo no válido</string>
    <string name="error_campo_requerido">Campo requerido</string>
    <string name="error_login">No se pudo iniciar sesión. Por favor ingrese las credenciales correctas</string>
    <string name="nuevo_pedido">Nuevo pedido</string>
    <string name="nuevo_registro">Nuevo registro</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="caracteristicas">Caracteristicas generales</string>
    <string name="agregar_cliente">Agregar cliente</string>
    <string name="label_cantidad">Cantidad:&#160;&#160;</string>
    <string name="label_precio">Precio:</string>
    <string name="label_unidad">Unidad:</string>
    <string name="label_subTotal">Sub total:</string>
    <string name="editar">Editar</string>
    <string name="quitar">Quitar</string>
    <string name="descripcion">Descripción</string>
    <string name="error_sin_serie">No se obtuvo la serie del usuario</string>
    <string name="error_sin_serie2">Para registrar pedidos, es necesario tener una serie de usuario. Sincronice la aplicación y vuelva a intentarlo</string>
    <string name="salir_app">¿Salir de la aplicación?</string>
    <string name="salir">Salir</string>
    <string name="cancelar">Cancelar</string>
    <string name="agregar_producto">Agregar producto</string>
    <string name="enviado">Enviado</string>
    <string name="pendiente">Pendiente</string>
    <string name="anulado">Anulado</string>
    <string name="facturado">Facturado</string>
    <string name="generado">Generado</string>
    <string name="label_numero_pedido">Número de pedido:</string>
    <string name="label_numero_documento">Número de documento:</string>
    <string name="label_estado_pedido">Estado de pedido:</string>
    <string name="label_importe_total">Importe total:</string>
    <string name="label_direccion">Dirección:</string>
    <string name="label_fecha_pedido">Fecha pedido:</string>
    <string name="label_forma_pago">Forma de pago:</string>
    <string name="label_observacion">Observación:</string>
    <string name="lista_productos">Lista de productos</string>
    <string name="detalle_pedido">Detalle de pedido</string>
    <string name="error_obtener_pedido">No se pudo obtener el pedido</string>
    <string name="incompleto">Incompleto</string>
    <string name="label_total">Total:&#160;&#160;</string>
    <string name="precio_sugerido">Precio sugerido</string>
    <string name="error_producto_registrado">Producto ya registrado</string>
    <string name="guardar">Guardar</string>
    <string name="descartar_pedido">Descartar pedido</string>
    <string name="se_perdera_pedido">Se perderán los datos del pedido</string>
    <string name="descartar_cambios">Descartar cambios</string>
    <string name="se_perdera_cambios">Se perderán todos los cambios realizados</string>
    <string name="descartar">Descartar</string>
    <string name="error_agregue_productos">Agregue productos</string>
    <string name="enviando_pedido">Enviando pedido&#8230;&#8230;&#8230;</string>
    <string name="venta_registrada">Se remitió la información al área de coordinación de IMAX.</string>
    <string name="atencion">Atención</string>
    <string name="error_no_registrar_venta">No se pudo registrar la inspección</string>
    <string name="error">Error</string>
    <string name="sin_internet_localmente">Es probable que no tenga acceso a INTERNET, se guardó localmente</string>
    <string name="se_guardo_localmente">No se pudo enviar, se guardó localmente</string>
    <string name="pedido_proceso_facturacion">El pedido se encuentra en proceso de facturación</string>
    <string name="venta_no_verificada">La inspección fue enviada, pero no se pude verificar</string>
    <string name="venta_time_max">La solicitud no puede ser atendida fuera del horario permitido (5AM a 7PM).</string>
    <string name="pendientes">Pendientes</string>
    <string name="enviar">Enviar</string>
    <string name="verificando">Verificando...</string>
    <string name="pedido_anulado">El pedido fué anulado</string>
    <string name="pedido_anulado_actualmente">El pedido se encuentra anulado actualmente</string>
    <string name="pedido_facturado_desea_anular">El pedido se encuentra facturado, ¿Desea anular la factura?</string>
    <string name="anular_factura">Anular factura</string>
    <string name="ingrese_numero_telefono">Ingrese número de teléfono</string>
    <string name="invalid_numero_telefono">Ingrese un número de teléfono válido</string>
    <string name="pedido_facturado_no_modificar">El pedido ha sido facturado y no se puede modificar</string>
    <string name="anular">Anular</string>
    <string name="modificar">Modificar</string>
    <string name="imprimir">Imprimir</string>
    <string name="selecciona_dispositivo">Selecciona un dispositivo</string>
    <string name="menu_bodega">Mi bodega</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="menu_negocio">Mi negocio</string>
    <string name="error_codigo_necesario">Código necesario</string>
    <string name="error_ubicacion_requerida">Ubicación requerida</string>
    <string name="hint_condicion">Condición</string>
    <string name="hint_fecha_emision">Fecha de emisión</string>
    <string name="hint_fecha_vencimiento">Fecha de vencimiento</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_clientes">Clientes</string>
</resources>