<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_general_medium"
    tools:context=".ui.pedido.PedidoCabeceraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Edittext oculto para que se seleccione al cambiar de tabs, y no se abra el datePicker al seleccionar la fecha automaticamente -->
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <requestFocus/>
            </EditText>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_numeroPedido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:editable="false"
                    android:hint="@string/hint_numero_pedido"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAsInputEditText"
                android:layout_marginTop="@dimen/margin_vertical_medium"
                android:textColor="@color/colorPrimary"
                android:text="@string/hint_cliente"/>

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/autocomplete_busqueda"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_medium"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cliente_general"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:hint="@string/hint_direccion"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_distrito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_distrito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:hint="@string/hint_distrito"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_ubigeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ubigeo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:editable="false"
                    android:hint="@string/hint_ubigeo"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_marginTop="@dimen/margin_vertical_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAsInputEditText"
                android:textColor="@color/colorPrimary"
                android:text="@string/hint_fecha"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_fecha_emision"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_medium"
                            android:enabled="false"
                            android:hint="@string/hint_fecha_emision"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_fecha_vencimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_medium"
                            android:enabled="false"
                            android:hint="@string/hint_fecha_vencimiento"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAsInputEditText"
                android:textColor="@color/colorPrimary"
                android:text="@string/hint_vendedor"
                android:layout_marginTop="@dimen/margin_vertical_medium"/>

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/autocomplete_busqueda_vendedor"
                android:layout_width="match_parent"
                android:textSize="@dimen/text_size_medium"
                android:layout_height="wrap_content"
                android:hint="@string/hint_vendedor_general"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAsInputEditText"
                android:text="@string/hint_condicion"/>
            <Spinner
                android:id="@+id/spn_condicion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewAsInputEditText"
                android:text="@string/hint_almacen"/>
            <Spinner
                android:id="@+id/spn_almacen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_medium"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_observaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:inputType="textMultiLine"
                    android:hint="@string/hint_observaciones"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
